
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#2518] Added delay to allow FC rules to load before RTEs load to allow RTE TVs to be moved
- [#2611] Added workaround for ExtJS bug with checkboxes/radios and an inputValue of string 0 that would prevent toggling
- [#2512] Have remove setup/ dir checked by default if not using Git version of MODx
- [#2699] Fixed loading issues with help panel on slow connections
- [#2701] Fixed issue where description did not show until refresh when adding a new Permission to an Access Policy Template
- [#2695] Postfixed Template to names of Access Policy Templates for clarity
- [#2700] Fixed bug with Access Policy Template editor that reset values on save
- [#2690] Renamed Administrator Access Policy Template Group to Admin
- [#2563] Fixed chmod action on directories from File Tree
- [#2693] Properly sort country indicies to properly display in dropdowns
- [#2562] Added confirm dialog and success response for emptying recycle bin
- [#2634] Ensured context key is changed when changing parent of a Resource via Edit Resource page if context is different for new parent
- [#2631] Fixed issue when drag/dropping categories onto other categories in Element tree
- [#2659] Fixed issue where action buttons were overlapping tabs on edit pages
- [#2668] Fixed issue with FC rules and labels on checkbox/radio fields
- [#2582] Fixed bug with orm tree preventing attributes on the root node
- Fix bug in phpthumb allowing remote src parameters regardless of settings
- [#2555] Expose additional phpthumb options in System Settings
- [#2503] "Preview" inaccurately described viewing current page/site. Changed to "View".
- Fixed help message strings to correct URLs
- Fixed missing options array call in modRestClient, isArray call in modRestCurlClient