@@ -19,6 +19,8 @@ $_lang['dropdown'] = 'DropDown List Menu';
 $_lang['email'] = 'Email';
 $_lang['file'] = 'File';
 $_lang['height'] = 'Height';
+$_lang['hidden'] = 'Hidden';
+$_lang['htmlarea'] = 'HTML Area';
 $_lang['htmltag'] = 'HTML Tag';
 $_lang['image'] = 'Image';
 $_lang['image_align'] = 'Align';
@@ -35,6 +37,7 @@ $_lang['number'] = 'Number';
 $_lang['option'] = 'Radio Options';
 $_lang['rawtext'] = 'Raw Text (deprecated)';
 $_lang['rawtextarea'] = 'Raw Textarea (deprecated)';
+$_lang['resourcelist'] = 'Resource List';
 $_lang['richtext'] = 'RichText';
 $_lang['sentence_case'] = 'Sentence Case';
 $_lang['string'] = 'String';
@@ -44,6 +47,7 @@ $_lang['tag_id'] = 'Tag ID';
 $_lang['tag_name'] = 'Tag Name';
 $_lang['target'] = 'Target';
 $_lang['text'] = 'Text';
+$_lang['textbox'] = 'Textbox';
 $_lang['textarea'] = 'Textarea';
 $_lang['textareamini'] = 'Textarea (Mini)';
 $_lang['title'] = 'Title';
