@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODx. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#2581] Fixed bug with resourcelist TV input type to handle resources from multiple contexts
 - [#2518] Added delay to allow FC rules to load before RTEs load to allow RTE TVs to be moved
 - [#2611] Added workaround for ExtJS bug with checkboxes/radios and an inputValue of string 0 that would prevent toggling
 - [#2512] Have remove setup/ dir checked by default if not using Git version of MODx
